# QuoteServer

./: CMakeLists.txt  QuoteServer.thrift
Debug/: makefile
src/: BoostWsClient.cpp  BoostWsClient.h  CoinBaseQuoteProvider.cpp  CoinBaseQuoteProvider.h  ConnectionFailedException.h  EasyWsClientCoinBaseQuoteProvider.cpp  EasyWsClientCoinBaseQuoteProvider.h  EventFactory.h  LimitOrderBook.cpp  LimitOrderBook.h  QuoteEngine.cpp  QuoteEngine.h  QuoteProvider.h  QuoteServer.cpp  QuoteServer.h  QuoteServerHandler.cpp  QuoteServerHandler.h  QuoteServerHandlerFactory.cpp  QuoteServerHandlerFactory.h  SimpleStockEventFactoryImpl.h  StockEvent.h  SubscribtionEventHandler.h  SubscriptionClientConnection.cpp  SubscriptionClientConnection.h  Trade.cpp  Trade.h  WangleClientConnection.cpp  WangleClientConnection.h  main.cpp  root_certificates.hpp
src_client/: QuoteClient.cpp  QuoteClientHandler.cpp  QuoteClientHandler.h
